# hasura-metric-adapter

./: .dockerignore  .gitignore  .stignore  Dockerfile  LICENSE  README.md  docker-compose.yml  k8s_example.yaml  okteto.yml
.github/workflows/: deploy.yml
example/grafana/dashboards/: hasura-example-metrics.json
example/grafana/provisioning/dashboards/: default.yaml
example/grafana/provisioning/datasources/: default.yaml
example/prometheus/: prometheus.yml
metrics/: Cargo.toml
metrics/src/: logprocessor.rs  logreader.rs  main.rs  telemetry.rs  util.rs
metrics/src/collectors/: cron_triggers.rs  event_triggers.rs  health.rs  metadata.rs  mod.rs  scheduled_events.rs  sql.rs
scripts/: entry.sh
