[package]
name = "metrics"
version = "0.1.7"
edition = "2021"
description = "A prometheus metric generator for Hasura based on the log stream"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"

reqwest = { version = "0.11", features = ["json"]}

tokio = { version = "1", features = ["full"]}
actix-web = "4.0.1"
prometheus = "0.13.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
clap = { version = "3", features = ["env", "cargo", "derive"] }
notify = "4.0.17"
snafu = "0.7.1"
regex = "1.6"
openssl = { version = "0.10.40", features = ["vendored"] }
futures = "0.3.25"
